--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
+
+#spring.mvc.view.prefix:/WEB-INF/jsp/
+#spring.mvc.view.suffix:.html
+server.port=8082
