--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.mvc.view.prefix:/WEB-INF/jsp/
-#spring.mvc.view.suffix:.html
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
 server.port=8082
+
+#spring.resources.static-locations=classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
