--- a/pom.xml
+++ b/pom.xml
@@ -84,13 +84,15 @@
         <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
         </dependency>-->
-        <dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+       <!-- <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.0.8.RELEASE</version>
-        </dependency>
+            <version>5.1.0.RELEASE</version>
+        </dependency>-->
+
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
