--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,13 @@ spring.mvc.view.suffix=.html
 server.port=8082
 
 spring.resources.static-locations=classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+
+spring.session.store-type=redis
+#4 Weeks Session Timeout (in seconds)
+server.session.timeout=241
+#spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
+session.clear.enabled=false
