commit for logout and switch to user changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,18 +10,22 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.html
-server.port=8082
+#spring.mvc.view.prefix=/templates/
+#spring.mvc.view.suffix=.html
+server.port=8083
+
+# dev tools
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
 
 spring.resources.static-locations=classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 
-spring.session.store-type=redis
-#4 Weeks Session Timeout (in seconds)
-server.session.timeout=241
-#spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
-session.clear.enabled=false
+#spring.session.store-type=redis
+##4 Weeks Session Timeout (in seconds)
+#server.session.timeout=241
+##spring.cache.type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
+#session.clear.enabled=false
