--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,23 @@ spring.resources.static-locations=classpath:/templates/,classpath:/META-INF/reso
 #
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
 #session.clear.enabled=false
+
+pring.thymeleaf.cache=false
+spring.thymeleaf.check-template=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.enabled=true
+spring.thymeleaf.enable-spring-el-compiler=false
+spring.thymeleaf.encoding=UTF-8
+##spring.thymeleaf.excluded-view-names=
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix=classpath:/templates/
+##spring.thymeleaf.reactive.chunked-mode-view-names=
+##spring.thymeleaf.reactive.full-mode-view-names=
+spring.thymeleaf.reactive.max-chunk-size=0B
+##spring.thymeleaf.reactive.media-types=
+spring.thymeleaf.render-hidden-markers-before-checkboxes=false
+##spring.thymeleaf.servlet.content-type=
+#spring.thymeleaf.servlet.produce-partial-output-while-processing=true
+spring.thymeleaf.suffix=.html
+##spring.thymeleaf.template-resolver-order=
+##spring.thymeleaf.view-names=
